@@ -7,22 +7,33 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.List;
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
-    @Value("${allowed.origins}")
+    @Value("${allowed.origins:}") // default to empty string if not provided
     private String allowedOriginsStr;
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins(Arrays.asList(allowedOriginsStr.split(","))); // split by comma
-        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
+
+        if (allowedOriginsStr == null || allowedOriginsStr.isBlank()) {
+            System.err.println("⚠️  WARNING: No allowed origins configured! CORS will reject all requests.");
+        } else {
+            List<String> allowedOrigins = Arrays.stream(allowedOriginsStr.split(","))
+                    .map(String::trim)
+                    .toList();
+            corsConfiguration.setAllowedOriginPatterns(allowedOrigins); // <-- allow wildcard matching
+        }
+
+        corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        corsConfiguration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        corsConfiguration.setExposedHeaders(List.of("Authorization"));
         corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", corsConfiguration);
